--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,32 @@ jobs:
       - image: circleci/openjdk:8-jdk-browsers@sha256:40ae64c13a503125a452cb5ffb5c01d14742c01d3676d77aa276fc6b956168be
         environment:
           MAVEN_OPTS: -Xmx3200m
+          BUILD_ARGS: -B -U -Dskip.failsafe.tests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+          SONAR_TARGETS: clean -Dsonar.login=${SONARQUBE_TOKEN} -Dsonar.branch.name=${CIRCLE_BRANCH} -Dsonar.pullrequest.provider=github -Dsonar.pullrequest.github.repository=${$CIRCLE_PR_REPONAME} -Dsonar.pullrequest.key=${CIRCLE_PULL_REQUEST} org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+
+      - image: circleci/mysql:5.7
+        environment:
+          MYSQL_ROOT_PASSWORD: rootpw
+          MYSQL_DATABASE: test
+          MYSQL_USER: open
+          MYSQL_PASSWORD: sesame
     working_directory: ~/orko
     steps:
-      - run: sudo apt-get install xvfb libgtk2.0-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2
+      - run:
+          name: Environment info
+          command: |
+            echo "Branch: $CIRCLE_BRANCH"
+            echo "Tag: $CIRCLE_TAG"
+            echo "Project: $CIRCLE_REPOSITORY_URL"
+            echo " - Username: $CIRCLE_PROJECT_USERNAME"
+            echo " - Repository: $CIRCLE_PROJECT_REPONAME"
+            echo "Pull request: $CIRCLE_PULL_REQUEST"
+            echo " - Username: $CIRCLE_PR_USERNAME"
+            echo " - Repository: $CIRCLE_PR_REPONAME"
+
+      - run:
+          name: Install packages
+          command: sudo apt-get install xvfb libgtk2.0-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2
 
       - checkout
 
@@ -19,6 +42,7 @@ jobs:
             - maven-repo-v2-{{ .Branch }}-{{ checksum "pom.xml" }}
             - maven-repo-v2-{{ .Branch }}-
             - maven-repo-v2-
+
       - restore_cache:
           keys:
             - node-v4-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}-{{ checksum "orko-end-to-end-testing/package-lock.json" }}
@@ -26,20 +50,21 @@ jobs:
             - node-v4-
 
       - run:
+          name: Build (plus Sonar if possible)
           command: |
-            echo "Branch: $CIRCLE_BRANCH"
-            echo "Project: $CIRCLE_REPOSITORY_URL"
-            echo " - Username: $CIRCLE_PROJECT_USERNAME"
-            echo " - Repository: $CIRCLE_PROJECT_REPONAME"
-            echo "Pull request: $CIRCLE_PULL_REQUEST"
-            echo " - Username: $CIRCLE_PR_USERNAME"
-            echo " - Repository: $CIRCLE_PR_REPONAME"
-            mvn -B -U -Pui,e2etest,bundle clean install -Dskip.failsafe.tests=true -Dskip.surefire.tests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -T 1C
+            if [ [ "$CIRCLE_REPOSITORY_URL" != "gruelbox/orko" ] || [ [ -n "$CIRCLE_PR_NUMBER" ] && [ "$CIRCLE_PR_REPONAME" != "gruelbox/orko" ] ] ]; then
+              echo "Build only"
+              mvn ${BUILD_ARGS} -Pui,e2etest,bundle,docker clean install -T 1C
+            else
+              echo "Build and sonar"
+              mvn ${BUILD_ARGS} -Pui,e2etest,bundle,docker,ci ${SONAR_TARGETS} -T 1C
+            fi
 
       - save_cache:
           paths:
             - ~/.m2
           key: maven-repo-v1-{{ .Branch }}-{{ checksum "pom.xml" }}
+
       - save_cache:
           paths:
             - ~/usr/local/lib/node_modules
@@ -51,6 +76,7 @@ jobs:
             mkdir -p ~/checkstyle/
             find . -type f -regex ".*/target/checkstyle-result.xml" -exec cp {} ~/checkstyle \;
           when: always
+
       - store_artifacts:
           path: ~/checkstyle
 
@@ -67,6 +93,42 @@ jobs:
             mkdir -p ~/junit/integration
             find . -type f -regex ".*/target/mocha-reports/.*xml" -exec cp {} ~/junit/integration \;
           when: always
+
+      - run:
+          name: Waiting for MySQL to be ready
+          command: |
+            for i in `seq 1 30`;
+            do
+              nc -z 127.0.0.1 3306 && echo Success && exit 0
+              echo -n .
+              sleep 1
+            done
+            echo Failed waiting for MySQL && exit 1
+
+      - run:
+          name: MySQL tests
+          command: mvn ${BUILD_ARGS} -Pdbonly clean test -Dmorf.mysql.noadmin=true -Dtestdb.url=mysql://open:sesame@127.0.0.1/test -Dspotbugs.skip=true -Dcheckstyle.skip=true
+
+      - run:
+          name: Saving test results (MySQL)
+          command: |
+            mkdir -p ~/junit/mysql
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/mysql \;
+          when: always
+
+      - run:
+          name: Release to Github (if tag and key available)
+          command: |
+            if [ -n "$GITHUB_API_KEY" ]; then
+              if [ [ "$CIRCLE_REPOSITORY_URL" == "gruelbox/orko" ] && [ -z "$CIRCLE_PR_NUMBER" ] && [ -n "$CIRCLE_TAG"] ]; then
+                cd orko-app
+                mvn github-release:release --settings ../etc/.maven-settings.xml -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+              else
+                echo "Not a tag"
+              fi
+            else
+              echo "Github API key not set"
+            end if
 
       - store_artifacts:
           path: ~/junit
