--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ notify:
 jobs:
   build:
     docker:
-      - image: circleci/openjdk:8-jdk-browsers@sha256:40ae64c13a503125a452cb5ffb5c01d14742c01d3676d77aa276fc6b956168be
+      - image: circleci/openjdk:8-jdk-browsers
         environment:
           MAVEN_OPTS: -Xmx3200m
           BUILD_ARGS: -B -U -Dskip.failsafe.tests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
@@ -52,11 +52,11 @@ jobs:
       - run:
           name: Build (plus Sonar if possible)
           command: |
-            if [ [ "$CIRCLE_REPOSITORY_URL" != "gruelbox/orko" ] || [ [ -n "$CIRCLE_PR_NUMBER" ] && [ "$CIRCLE_PR_REPONAME" != "gruelbox/orko" ] ] ]; then
+            if [ [ "$CIRCLE_PROJECT_USERNAME" != "gruelbox" ] || [ "$CIRCLE_PROJECT_REPONAME" != "orko" ] || [ [ ! -z "$CIRCLE_PR_NUMBER" ] && [ [ "$CIRCLE_PR_USERNAME" != "gruelbox" ] || [ "$CIRCLE_PR_REPONAME" != "orko" ] ] ] ]; then
               echo "Build only"
               mvn ${BUILD_ARGS} -Pui,e2etest,bundle,docker clean install -T 1C
             else
-              echo "Build and sonar"
+              echo "Build and Sonar"
               mvn ${BUILD_ARGS} -Pui,e2etest,bundle,docker,ci ${SONAR_TARGETS} -T 1C
             fi
 
@@ -120,7 +120,7 @@ jobs:
           name: Release to Github (if tag and key available)
           command: |
             if [ -n "$GITHUB_API_KEY" ]; then
-              if [ [ "$CIRCLE_REPOSITORY_URL" == "gruelbox/orko" ] && [ -z "$CIRCLE_PR_NUMBER" ] && [ -n "$CIRCLE_TAG"] ]; then
+              if [ [ "$CIRCLE_PROJECT_USERNAME" == "gruelbox" ] && [ "$CIRCLE_PROJECT_REPONAME" == "orko" ] && [ -z "$CIRCLE_PR_NUMBER" ] && [ ! -z "$CIRCLE_TAG"] ]; then
                 cd orko-app
                 mvn github-release:release --settings ../etc/.maven-settings.xml -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
               else
