--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
       - run:
           name: Build (plus Sonar if possible)
           command: |
-            if [ [ "$CIRCLE_PROJECT_USERNAME" != "gruelbox" ] || [ "$CIRCLE_PROJECT_REPONAME" != "orko" ] || [ [ ! -z "$CIRCLE_PR_NUMBER" ] && [ [ "$CIRCLE_PR_USERNAME" != "gruelbox" ] || [ "$CIRCLE_PR_REPONAME" != "orko" ] ] ] ]; then
+            if [[ $CIRCLE_PROJECT_USERNAME != "gruelbox" || $CIRCLE_PROJECT_REPONAME != "orko" || ((-n $CIRCLE_PR_NUMBER) && ($CIRCLE_PR_USERNAME != "gruelbox" || $CIRCLE_PR_REPONAME != "orko")) ]]; then
               echo "Build only"
               mvn ${BUILD_ARGS} -Pui,e2etest,bundle,docker clean install -T 1C
             else
@@ -120,7 +120,7 @@ jobs:
           name: Release to Github (if tag and key available)
           command: |
             if [ -n "$GITHUB_API_KEY" ]; then
-              if [ [ "$CIRCLE_PROJECT_USERNAME" == "gruelbox" ] && [ "$CIRCLE_PROJECT_REPONAME" == "orko" ] && [ -z "$CIRCLE_PR_NUMBER" ] && [ ! -z "$CIRCLE_TAG"] ]; then
+              if [[ $CIRCLE_PROJECT_USERNAME == "gruelbox" && $CIRCLE_PROJECT_REPONAME == "orko" && -z "$CIRCLE_PR_NUMBER" && -n "$CIRCLE_TAG" ]]; then
                 cd orko-app
                 mvn github-release:release --settings ../etc/.maven-settings.xml -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
               else
