--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,10 +54,10 @@ jobs:
           command: |
             if [[ $CIRCLE_PROJECT_USERNAME != "gruelbox" || $CIRCLE_PROJECT_REPONAME != "orko" || ((-n $CIRCLE_PR_NUMBER) && ($CIRCLE_PR_USERNAME != "gruelbox" || $CIRCLE_PR_REPONAME != "orko")) ]]; then
               echo "Build only"
-              mvn ${BUILD_ARGS} -Pui,e2etest,bundle clean package -T 1C
+              mvn ${BUILD_ARGS} -Pui,e2etest,bundle clean install -T 1C
             else
-              echo "Build and Sonar (currently disabled)"
-              mvn ${BUILD_ARGS} -Pui,e2etest,bundle clean package -T 1C
+              echo "Build and Sonar"
+              mvn ${BUILD_ARGS} -Pui,e2etest,bundle,ci ${SONAR_TARGETS} -T 1C
             fi
 
       - save_cache:
@@ -128,7 +128,7 @@ jobs:
               fi
             else
               echo "Github API key not set"
-            end if
+            fi
 
       - store_artifacts:
           path: ~/junit
