--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,10 +54,10 @@ jobs:
           command: |
             if [[ $CIRCLE_PROJECT_USERNAME != "gruelbox" || $CIRCLE_PROJECT_REPONAME != "orko" || ((-n $CIRCLE_PR_NUMBER) && ($CIRCLE_PR_USERNAME != "gruelbox" || $CIRCLE_PR_REPONAME != "orko")) ]]; then
               echo "Build only"
-              mvn ${BUILD_ARGS} -Pui,e2etest,bundle clean install -T 1C
+              mvn ${BUILD_ARGS} -Pui,e2etest,bundle clean install -T 1C -e
             else
               echo "Build and Sonar"
-              mvn ${BUILD_ARGS} -Pui,e2etest,bundle,ci ${SONAR_TARGETS} -T 1C
+              mvn ${BUILD_ARGS} -Pui,e2etest,bundle,ci ${SONAR_TARGETS} -T 1C -e
             fi
 
       - save_cache:
