--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,6 @@ jobs:
         environment:
           MAVEN_OPTS: -Xmx3200m
           BUILD_ARGS: -B -U -Dskip.failsafe.tests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
-          SONAR_TARGETS: clean install sonar:sonar -Dsonar.login=${SONARQUBE_TOKEN} -Dsonar.branch.name=${CIRCLE_BRANCH} -Dsonar.pullrequest.provider=github -Dsonar.pullrequest.github.repository=${$CIRCLE_PR_REPONAME} -Dsonar.pullrequest.key=${CIRCLE_PULL_REQUEST} org.jacoco:jacoco-maven-plugin:prepare-agent
 
       - image: circleci/mysql:5.7
         environment:
@@ -62,13 +61,20 @@ jobs:
       - run:
           name: Build (plus Sonar if possible)
           command: |
-            if [[ $CIRCLE_PROJECT_USERNAME != "gruelbox" || $CIRCLE_PROJECT_REPONAME != "orko" || ((-n $CIRCLE_PR_NUMBER) && ($CIRCLE_PR_USERNAME != "gruelbox" || $CIRCLE_PR_REPONAME != "orko")) ]]; then
-              echo "Build only"
-              mvn ${BUILD_ARGS} -Pui,e2etest,bundle clean install -T 1C -e
-            else
+            if [-n "$SONARQUBE_TOKEN"]; then
               echo "Build and Sonar"
               export PATH=/home/circleci/apache-maven-3.6.1/bin:$PATH
-              mvn ${BUILD_ARGS} -Pui,e2etest,bundle,ci ${SONAR_TARGETS} -T 1C -e
+              mvn ${BUILD_ARGS} -T 1C -Pui,e2etest,bundle,ci clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar \
+                -Dsonar.host.url=https://sonarcloud.io \
+                -Dsonar.organization=${$CIRCLE_PROJECT_USERNAME} \
+                -Dsonar.login=${SONARQUBE_TOKEN} \
+                -Dsonar.branch.name=${CIRCLE_BRANCH} \
+                -Dsonar.pullrequest.provider=github \
+                -Dsonar.pullrequest.github.repository=${$CIRCLE_PR_REPONAME} \
+                -Dsonar.pullrequest.key=${CIRCLE_PULL_REQUEST}
+            else
+              echo "Build only"
+              mvn ${BUILD_ARGS} -T 1C -Pui,e2etest,bundle clean install 
             fi
 
       - save_cache:
@@ -118,7 +124,12 @@ jobs:
 
       - run:
           name: MySQL tests
-          command: mvn ${BUILD_ARGS} -Pdbonly clean test -Dmorf.mysql.noadmin=true -Dtestdb.url=mysql://open:sesame@127.0.0.1/test -Dspotbugs.skip=true -Dcheckstyle.skip=true
+          command: |
+            mvn ${BUILD_ARGS} -Pdbonly clean test \
+              -Dmorf.mysql.noadmin=true \
+              -Dtestdb.url=mysql://open:sesame@127.0.0.1/test \
+              -Dspotbugs.skip=true \
+              -Dcheckstyle.skip=true
 
       - run:
           name: Saving test results (MySQL)
@@ -131,9 +142,11 @@ jobs:
           name: Release to Github (if tag and key available)
           command: |
             if [ -n "$GITHUB_API_KEY" ]; then
-              if [[ $CIRCLE_PROJECT_USERNAME == "gruelbox" && $CIRCLE_PROJECT_REPONAME == "orko" && -z "$CIRCLE_PR_NUMBER" && -n "$CIRCLE_TAG" ]]; then
+              if [ -n "$CIRCLE_TAG" ]; then
                 cd orko-app
-                mvn github-release:release --settings ../etc/.maven-settings.xml -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+                mvn -B github-release:release \
+                  --settings ../etc/.maven-settings.xml \
+                  -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
               else
                 echo "Not a tag"
               fi
