Tailor sonar arguments depending on commit type

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,14 +64,23 @@ jobs:
             if [[ -n "$SONARQUBE_TOKEN" ]]; then
               echo "Build and Sonar"
               export PATH=/home/circleci/apache-maven-3.6.1/bin:$PATH
-              mvn ${BUILD_ARGS} -T 1C -Pui,e2etest,bundle,ci clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar \
-                -Dsonar.host.url=https://sonarcloud.io \
-                -Dsonar.organization=${CIRCLE_PROJECT_USERNAME} \
-                -Dsonar.login=${SONARQUBE_TOKEN} \
-                -Dsonar.branch.name=${CIRCLE_BRANCH} \
-                -Dsonar.pullrequest.provider=github \
-                -Dsonar.pullrequest.github.repository=${CIRCLE_PR_REPONAME} \
-                -Dsonar.pullrequest.key=${CIRCLE_PULL_REQUEST}
+              export SONAR_TARGETS=-Pui,e2etest,bundle,ci clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+              export SONAR_ARGS=-Dsonar.host.url=https://sonarcloud.io \
+                  -Dsonar.organization=${CIRCLE_PROJECT_USERNAME} \
+                  -Dsonar.login=${SONARQUBE_TOKEN}
+              if [[ -n "$CIRCLE_BRANCH" ]]; then
+                mvn ${BUILD_ARGS} -T 1C ${SONAR_TARGETS} ${SONAR_ARGS} \
+                  -Dsonar.branch.name=${CIRCLE_BRANCH}
+              else
+                if [[ -n "$CIRCLE_PULL_REQUEST" ]]; then
+                  mvn ${BUILD_ARGS} -T 1C ${SONAR_TARGETS} ${SONAR_ARGS} \
+                    -Dsonar.pullrequest.provider=github \
+                    -Dsonar.pullrequest.github.repository=${CIRCLE_PR_REPONAME} \
+                    -Dsonar.pullrequest.key=${CIRCLE_PULL_REQUEST}
+                else
+                   mvn ${BUILD_ARGS} -T 1C ${SONAR_TARGETS} ${SONAR_ARGS}
+                fi
+              fi
             else
               echo "Build only"
               mvn ${BUILD_ARGS} -T 1C -Pui,e2etest,bundle clean install 
