--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,10 +64,10 @@ jobs:
             if [[ -n "$SONARQUBE_TOKEN" ]]; then
               echo "Build and Sonar"
               export PATH=/home/circleci/apache-maven-3.6.1/bin:$PATH
-              export SONAR_TARGETS=-Pui,e2etest,bundle,ci clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
-              export SONAR_ARGS=-Dsonar.host.url=https://sonarcloud.io \
+              export SONAR_TARGETS="-Pui,e2etest,bundle,ci clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar"
+              export SONAR_ARGS="-Dsonar.host.url=https://sonarcloud.io \
                   -Dsonar.organization=${CIRCLE_PROJECT_USERNAME} \
-                  -Dsonar.login=${SONARQUBE_TOKEN}
+                  -Dsonar.login=${SONARQUBE_TOKEN}""
               if [[ -n "$CIRCLE_BRANCH" ]]; then
                 mvn ${BUILD_ARGS} -T 1C ${SONAR_TARGETS} ${SONAR_ARGS} \
                   -Dsonar.branch.name=${CIRCLE_BRANCH}
