--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,7 @@ jobs:
     working_directory: ~/orko
     steps:
       - attach_workspace:
-          at: ~/orko
+          at: /home/circleci
       - run:
           name: Upgrade Maven
           command: |
@@ -157,7 +157,7 @@ jobs:
           name: Install packages
           command: sudo apt-get install xvfb libgtk2.0-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2
       - attach_workspace:
-          at: ~/orko
+          at: /home/circleci
       - restore_cache:
           keys:
             - maven-repo-v2-{{ .Branch }}-{{ checksum "pom.xml" }}
@@ -196,7 +196,7 @@ jobs:
     working_directory: ~/orko
     steps:
       - attach_workspace:
-          at: ~/orko
+          at: /home/circleci
       - restore_cache:
           keys:
             - maven-repo-v2-{{ .Branch }}-{{ checksum "pom.xml" }}
@@ -238,7 +238,7 @@ jobs:
     working_directory: ~/orko
     steps:
       - attach_workspace:
-          at: ~/orko
+          at: /home/circleci
       - restore_cache:
           keys:
             - maven-repo-v2-{{ .Branch }}-{{ checksum "pom.xml" }}
